Added the contact me section (still need more things) updated some menu things

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 	background: white;
 	margin-top: -8px;
 }
+/* body {
+	background-image: url(frame.png);
+	background-repeat: no-repeat;
+} */
 h2 {
 	width: 100%;
 	text-align: center; 
@@ -14,6 +18,9 @@ h2 {
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 10px 0 20px; 
  } 
+ input {
+	width: fit-content;
+ }
  
  h2 span { 
 	 background:#fff; 
@@ -42,3 +49,19 @@ ul {
 	ul li a:hover {
 		color: rgba(12, 206, 231, 0.89);
 		}
+.textarea {
+	border: 1px solid #ccc;
+	display: block;
+	width: 28.7%;
+	overflow: hidden;
+	resize: both;
+	min-height: 60px;
+	line-height: 20px;
+	border-radius: 1px;
+	padding: 1px 6px;
+	margin-left: 7.5%;
+	}
+.textarea[contenteditable]:empty::before {
+	content: "Put here the content of your messege";
+	color: gray;
+	}
