--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@
 	background: white;
 	margin-top: -8px;
 }
-/* body {
-	background-image: url(frame.png);
+body {
+	background-image: url(https://static0.gamerantimages.com/wordpress/wp-content/uploads/2022/06/Collage-Maker-10-Jun-2022-0309-PM.jpg);
 	background-repeat: no-repeat;
-} */
+	background-size: cover;
+	background-attachment: fixed;
+}
 h2 {
 	width: 100%;
 	text-align: center; 
@@ -23,7 +25,7 @@ h2 {
  }
  
  h2 span { 
-	 background:#fff; 
+	 background:#ff0000; 
 	 padding:0 3px; 
  }
 ul {
@@ -65,3 +67,19 @@ ul {
 	content: "Put here the content of your messege";
 	color: gray;
 	}
+
+.about {
+	width: 70%;
+	margin-inline-start: 15%;
+	box-shadow: 0 0px 70px 30px white;
+	font-size: 25px;
+	color: rgb(25, 38, 224);
+	word-wrap: break-word;
+	white-space: initial;
+	background-color: rgb(204, 194, 53);
+
+}
+.netpics {
+	width: 50%;
+	height: 10%;
+}
