--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 	background: white;
 	margin-top: -8px;
 }
+#logo {
+	width: 150%;
+	height: 35px;
+}
 body {
 	background-image: url(https://static0.gamerantimages.com/wordpress/wp-content/uploads/2022/06/Collage-Maker-10-Jun-2022-0309-PM.jpg);
 	background-repeat: no-repeat;
@@ -25,7 +29,7 @@ h2 {
  }
  
  h2 span { 
-	 background:#ff0000; 
+	 background:#d1e42a; 
 	 padding:0 3px; 
  }
 ul {
@@ -45,14 +49,14 @@ ul {
 	display: block;
 	color: white;
 	text-align: center;
-	padding: 16px;
+	padding: 1/8%;
 	text-decoration: none;
 	}
 	ul li a:hover {
 		color: rgba(12, 206, 231, 0.89);
 		}
 .textarea {
-	border: 1px solid #ccc;
+	border: 1px solid rgb(49, 49, 49);
 	display: block;
 	width: 28.7%;
 	overflow: hidden;
@@ -64,8 +68,8 @@ ul {
 	margin-left: 7.5%;
 	}
 .textarea[contenteditable]:empty::before {
-	content: "Put here the content of your messege";
-	color: gray;
+	content: "tell me, why you want to be an hunter?";
+	color: black;
 	}
 
 .about {
@@ -79,7 +83,24 @@ ul {
 	background-color: rgb(204, 194, 53);
 
 }
-.netpics {
-	width: 50%;
-	height: 10%;
+.container {
+	width: 100%;
+	height: 55%;
+	display: flex;
+}
+.col {
+	height: 90% ;
+	width: 30vh;
+	flex: auto;
+	padding: 5px;
+}
+.col img{
+	width: 100%;
+	height: 50vh;
+	/* right: 0;
+	bottom: 0; */
+	padding-bottom: 0px;
+}
+#firstcol {
+	height: 100vh;
 }
