--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 #menu
 {
+	z-index: 100;
 	position: fixed;
 	width: 100%;
 	height: 35px;
@@ -16,10 +17,13 @@ body {
 	background-size: cover;
 	background-attachment: fixed;
 }
+html {
+	scroll-behavior: smooth;
+}
 h2 {
 	width: 100%;
 	text-align: center; 
-	border-bottom: 8px solid #0c0fb8; 
+	border-bottom: 8px solid transparent; 
 	line-height: 0.1em;
 	font-family: Arial, Helvetica, sans-serif;
 	margin: 10px 0 20px; 
@@ -65,7 +69,7 @@ ul {
 	line-height: 20px;
 	border-radius: 1px;
 	padding: 1px 6px;
-	margin-left: 7.5%;
+	margin-left: 3%;
 	}
 
 .about {
@@ -94,9 +98,8 @@ ul {
 .col img{
 	width: 100%;
 	height: 50vh;
-	/* right: 0;
-	bottom: 0; */
 	padding-bottom: 0px;
+	transform: scale(1.0);
 }
 .col img:hover{
 	box-shadow: 0 0px 70px 10px rgb(184, 172, 12);
@@ -106,8 +109,56 @@ ul {
 #firstcol {
 	height: 100vh;
 }
-.vids iframe{
-	box-shadow: 0 0px 70px 10px rgb(4, 15, 114);
-	transition: .2s linear;
-	transform: scale(1.02);
+.vids {
+	width: 100%;
+	display: inline-grid;
+	grid-auto-flow: column;
+	overflow: auto;
+	justify-content: center;
+	gap: 5px;
+}
+
+
+
+.flip {
+	z-index: auto;
+	margin: auto;
+	background-color: transparent;
+	width: 300px;
+	height: 400px;
+	perspective: 1000px;
+  }
+  .flip-inner {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	transition: transform 0.6s;
+	transform-style: preserve-3d;
+  }
+  .flip:hover .flip-inner {
+	transform: rotateY(180deg);
+  }
+  .flip-front, .flip-back {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	/* -webkit-backface-visibility: hidden; */
+	backface-visibility: hidden;
+  }
+  .flip-back {
+	color: white;
+	transform: rotateY(180deg);
+  }
+.qna {
+	width: 70%;
+	margin-inline-start: 15%;
+	/* box-shadow: 0 0px 70px 30px white; */
+	background-color: rgb(204, 194, 53);
+	font-size: 25px;
+	color: rgb(25, 38, 224);
+	word-wrap: break-word;
+	white-space: initial;
+	background-color: rgb(204, 194, 53);
+
 }
